Add favicon, 10% back, update page title with task and time

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Task Timer",
-  "name": "Create React App Sample",
+  "name": "Task Timer",
   "icons": [
     {
       "src": "favicon.ico",
