--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.9",
+    "@codemirror/lang-markdown": "^6.1.1",
+    "@codemirror/language-data": "^6.3.1",
+    "@codemirror/state": "^6.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.3",
@@ -16,7 +20,13 @@
     "@types/node": "^16.18.35",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
+    "@uiw/codemirror-theme-github": "^4.21.3",
+    "@uiw/codemirror-theme-nord": "^4.21.3",
+    "@uiw/codemirror-theme-okaidia": "^4.21.3",
+    "@uiw/react-codemirror": "^4.21.3",
+    "codemirror": "^6.0.1",
     "http-proxy-middleware": "^2.0.6",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-monaco-editor": "^0.52.0",
